spec/ruby/optional/capi/ext/string_spec.c
@@ -573,7 +573,7 @@ static VALUE string_spec_rb_str_unlocktmp(VALUE self, VALUE str) {
 }
 
 static VALUE string_spec_rb_enc_interned_str_cstr(VALUE self, VALUE str, VALUE enc) {
-  rb_encoding *e = rb_to_encoding(enc);
+  rb_encoding *e = NIL_P(enc) ? 0 : rb_to_encoding(enc);
   return rb_enc_interned_str_cstr(RSTRING_PTR(str), e);
 }
 
